Added api for storage-dataiku automatic connection creation